kube/prod/lifescope-embed.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lifescope
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lifescope-embed
  namespace: lifescope
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lifescope-embed
  template:
    metadata:
      labels:
        app: lifescope-embed
    spec:
      serviceAccountName: lifescope
      containers:
        - name: lifescope-embed
          image: lifescopelabs/lifescope-embed:v1.1.0
          ports:
            - containerPort: 8061
          volumeMounts:
              - mountPath: "/usr/src/lifescope-embed/tmp"
                name: lifescope-embed-prod-config
                readOnly: true
          lifecycle:
            postStart:
              exec:
                command:
                  - /bin/sh
                  - -c
                  - cp /usr/src/lifescope-embed/tmp/config.prod.js /usr/src/lifescope-embed/config.production.js
          imagePullPolicy: IfNotPresent
      dnsPolicy: Default
      volumes:
        - name: lifescope-embed-prod-config
          secret:
            secretName: lifescope-embed-prod-config
---
apiVersion: v1
kind: Service
metadata:
  name: lifescope-embed
  namespace: lifescope
spec:
  selector:
    app: lifescope-embed
  ports:
    - name: lifescope-embed
      protocol: TCP
      port: 8061
      targetPort: 8061
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: lifescope-embed-ingress-master
  namespace: lifescope
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "master"
spec:
  tls:
    - hosts:
        - embed.lifescope.io
      secretName: lifescope-secret
  rules:
    - host: embed.lifescope.io
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: lifescope-embed-ingress-main-minion
  namespace: lifescope
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "minion"
spec:
  rules:
    - host: embed.lifescope.io
      http:
        paths:
          - backend:
              serviceName: lifescope-embed
              servicePort: 8061
            path: /
